@@ -254,7 +254,12 @@ class Assessment(ATFolder, ModalFieldEditableAware,
     def Description(self):
         """Returns description"""
         convert = getToolByName(self, 'portal_transforms').convert
-        return convert('html_to_text', self.getKey_message()).getData()
+        text = convert('html_to_text', self.getKey_message()).getData()
+        try:
+            text = text.decode('utf-8')
+        except UnicodeDecodeError:
+            pass
+        return text
 
     security.declarePublic("getGeographicCoverage")
     def getGeographicCoverage(self):
