@@ -120,7 +120,12 @@ class WorkItem(ATCTContent, BrowserDefaultMixin):
     def Description(self):
         """Description"""
         convert = getToolByName(self, 'portal_transforms').convert
-        return convert('html_to_text', self.getDescription()).getData()
+        text = convert('html_to_text', self.getDescription()).getData()
+        try:
+            text = text.decode('utf-8')
+        except UnicodeDecodeError:
+            pass
+        return text
 
 
 registerType(WorkItem, PROJECTNAME)
